--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <body>
     <header>
         <h1>To-Do List</h1>
+        <div id="alarm-icon" class="alarm-icon">🔔</div>
     </header>
 
     <main>
         <div class="todo-container">
+            <div class="calendar-container">
+                <input type="date" id="task-date">
+                <input type="time" id="task-time">
+            </div>
             <input type="text" id="new-task" placeholder="Add a new task...">
             <button id="add-task">Add</button>
             <ul id="task-list"></ul>
